[package]
name = "rune-ssa"
version = "0.7.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/rune"
keywords = ["language", "scripting"]
categories = []
description = """
An embeddable dynamic programming language for Rust.
"""

[dependencies]
thiserror = "1.0.22"
hashbrown = "0.9.1"

runestick = { path = "../runestick", version = "0.7.0" }

[package.metadata.docs.rs]
all-features = true
